--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
-    compile project(':NumericKeyboard')
-    compile project(':PasswordView')
+    compile 'com.yjt.password:NumericKeyboard:0.0.1'
+    compile 'com.yjt.password:PasswordView:0.0.1'
 }
